--- a/gradle.properties
+++ b/gradle.properties
@@ -3,16 +3,15 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/versions.html
-	minecraft_version=1.17.1
-	yarn_mappings=1.17.1+build.14
-	loader_version=0.11.6
+	minecraft_version=1.19.2
+	yarn_mappings=1.19.2+build.28
+	loader_version=0.14.10
 
 # Mod Properties
 	mod_version = 1.0.0
-	maven_group = com.hattolo
+	maven_group = com.techsupportred
 	archives_base_name = consolesounds
 
 # Dependencies
-	fabric_version=0.37.0+1.17
-	mod_menu_version = 2.0.14
-	cloth_config_version = 5.0.34
+	fabric_version=0.76.1+1.19.2
+	cloth_config_version = 8.3.103
